--- a/Project-I-Social-Card/social-card/src/App.css
+++ b/Project-I-Social-Card/social-card/src/App.css
@@ -4,6 +4,15 @@
 */
 
 .container {
-  width: 650px;
+  width: 620px;
   margin: 0 auto;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+.header {
+  margin-bottom: 20px;
 }
