--- a/Project-II-Calculator/calculator/src/components/DisplayComponents/Display.css
+++ b/Project-II-Calculator/calculator/src/components/DisplayComponents/Display.css
@@ -1,5 +1,5 @@
 .calcDisplay {
-  background-color: black;
+  background-color: #202020;
   display: flex;
   justify-content: flex-end;
   width: 100%;
